UX: Fix alignment of full-page-header elements

--- a/assets/stylesheets/common/chat-channel-title.scss
+++ b/assets/stylesheets/common/chat-channel-title.scss
@@ -73,6 +73,7 @@
 
 .chat-channel-title__category-badge {
   color: var(--primary-medium);
+  display: flex;
   font-size: var(--font-up-1);
   position: relative;
 
