--- a/assets/stylesheets/mobile/mobile.scss
+++ b/assets/stylesheets/mobile/mobile.scss
@@ -52,7 +52,7 @@ body.has-full-page-chat {
 
   .chat-full-page-header {
     background-color: var(--secondary);
-    padding: 0.5em 0.5em 0.5em 0em;
+    padding: 0.5em 0;
   }
 }
 
